--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.0.12",
+    "@tailwindcss/vite": "^4.0.12",
     "astro": "^5.4.2",
-    "form-data": "^4.0.2"
+    "css": "^3.0.0",
+    "form-data": "^4.0.2",
+    "postcss": "^8.5.3"
+  },
+  "devDependencies": {
+    "tailwindcss": "^4.0.12"
   }
 }
