--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/netlify": "^6.2.3",
     "@tailwindcss/postcss": "^4.0.12",
     "@tailwindcss/vite": "^4.0.12",
     "astro": "^5.4.2",
@@ -17,6 +18,7 @@
     "postcss": "^8.5.3"
   },
   "devDependencies": {
+    "netlify-cli": "^19.0.2",
     "tailwindcss": "^4.0.12"
   }
 }
