--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "astro": "^5.4.2",
     "css": "^3.0.0",
     "form-data": "^4.0.2",
+    "pocketbase": "^0.25.2",
     "postcss": "^8.5.3"
   },
   "devDependencies": {
